--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mijoco/stx_helpers",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -24,6 +24,7 @@
   "dependencies": {
     "@stacks/connect": "^7.7.1",
     "@stacks/network": "^6.13.0",
+    "c32check": "^2.0.0",
     "tslib": "^2.6.3"
   }
 }
