--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mijoco/stx_helpers",
-  "version": "0.1.14",
+  "version": "0.2.3",
   "main": "index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -27,6 +27,7 @@
     "@stacks/connect": "^7.7.1",
     "@stacks/encryption": "^6.15.0",
     "@stacks/network": "^6.13.0",
+    "@stacks/transactions": "^6.15.0",
     "c32check": "^2.0.0",
     "micro-packed": "^0.6.3",
     "tslib": "^2.6.3"
