--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mijoco/stx_helpers",
-  "version": "0.5.6",
+  "version": "0.6.75",
   "main": "index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -17,21 +17,22 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^20.14.2",
+    "@types/node": "^22.10.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@mijoco/btc_helpers": "^0.0.3",
-    "@scure/btc-signer": "^1.3.2",
-    "@stacks/common": "^6.13.0",
-    "@stacks/connect": "^7.7.1",
-    "@stacks/encryption": "^6.15.0",
-    "@stacks/network": "^6.13.0",
-    "@stacks/transactions": "^6.15.0",
+    "@mijoco/btc_helpers": "^0.0.13",
+    "@scure/btc-signer": "^1.5.0",
+    "@stacks/common": "^7.0.2",
+    "@stacks/connect": "^7.9.0",
+    "@stacks/encryption": "^7.0.2",
+    "@stacks/network": "^7.0.2",
+    "@stacks/transactions": "^7.0.2",
     "c32check": "^2.0.0",
-    "micro-packed": "^0.6.3",
-    "mongodb": "^6.8.0",
-    "tslib": "^2.6.3"
+    "merkletreejs": "^0.4.1",
+    "micro-packed": "^0.7.0",
+    "mongodb": "^6.12.0",
+    "tslib": "^2.8.1"
   }
 }
