--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mijoco/stx_helpers",
-  "version": "0.7.29",
+  "version": "0.7.30",
   "main": "index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -24,11 +24,11 @@
   "dependencies": {
     "@mijoco/btc_helpers": "^0.0.18",
     "@scure/btc-signer": "^1.5.0",
-    "@stacks/common": "^7.0.2",
-    "@stacks/connect": "^7.9.0",
-    "@stacks/encryption": "^7.0.2",
-    "@stacks/network": "^7.0.2",
-    "@stacks/transactions": "^7.0.2",
+    "@stacks/bns": "7.2.0",
+    "@stacks/common": "7.0.2",
+    "@stacks/encryption": "7.2.0",
+    "@stacks/network": "7.2.0",
+    "@stacks/transactions": "7.2.0",
     "c32check": "^2.0.0",
     "merkletreejs": "^0.4.1",
     "micro-packed": "^0.7.0",
